# learn_ffmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/lin/abcdq/ffmpegtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/lin/abcdq/ffmpegtest/: CAO.kt  CameraActivity.kt  MainActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/lin/abcdq/ffmpegtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib_ffmpeg/: CMakeLists.txt
lib_ffmpeg/src/androidTest/java/lin/abcdq/ffmpeg/: ExampleInstrumentedTest.kt
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/cpp/: native_lib.cpp
lib_ffmpeg/src/main/cpp/ffmpeg/codec/: AudioCodec.cpp  AudioCodec.h  AudioDecode.h  BaseCodec.cpp  BaseCodec.h  BaseDecode.h  VideoCodec.cpp  VideoCodec.h  VideoDecode.h
lib_ffmpeg/src/main/cpp/ffmpeg/utils/: CodecUtils.cpp  CodecUtils.h  PixImage.h
lib_ffmpeg/src/main/cpp/opengles/render/: SimpleRender.cpp  SimpleRender.h  VideoRender.cpp  VideoRender.h
lib_ffmpeg/src/main/cpp/opensles/render/: AudioRender.cpp  AudioRender.h  BaseSL.cpp
lib_ffmpeg/src/main/cpp/opensles/utils/: SLUtils.cpp  SLUtils.h
lib_ffmpeg/src/main/cpp/player/: SimplePlayer.cpp  SimplePlayer.h
lib_ffmpeg/src/main/cpp/utils/: PixAudio.h  PixImage.h
lib_ffmpeg/src/main/java/lin/abcdq/ffmpeg/: FFPlayer.kt  FFmpegJni.kt
lib_ffmpeg/src/main/java/lin/abcdq/ffmpeg/camera/: CameraUse.kt  CameraWrap.kt  CameraWrapCall.kt
lib_ffmpeg/src/main/java/lin/abcdq/ffmpeg/util/: ImageUtils.kt
lib_ffmpeg/src/test/java/lin/abcdq/ffmpeg/: ExampleUnitTest.kt
